WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271193
REGRESSION (
276177@main
): Fullscreen API tests crash with a UIViewControllerHierarchyInconsistency exception
https://bugs.webkit.org/show_bug.cgi?id=271193
Summary
REGRESSION (276177@main): Fullscreen API tests crash with a UIViewControllerH...
Andy Estes
Reported
2024-03-18 16:01:18 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-18 16:01:31 PDT
<
rdar://problem/124974019
>
Andy Estes
Comment 2
2024-03-18 16:08:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26081
EWS
Comment 3
2024-03-19 10:53:15 PDT
Committed
276356@main
(6f450cea7dc6): <
https://commits.webkit.org/276356@main
> Reviewed commits have been landed. Closing PR #26081 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug